# PTI-LDM-VAE

./: .env.example  .gitignore  .pre-commit-config.yaml  OLD_README.md  README.md  VAE_PLAN.md  WANDB_METRICS.md  compute_metrics_class_tif.py  environment.yml  inference_vae_tif.py  pyproject.toml  train_diffusion_tif_cond.py  tsne_latent_vae.py  umap_latent_vae.py  utils_tif.py  utils_tif_no_augment.py
config/: README.md  ar_vae_both.json  ar_vae_dente.json  ar_vae_dente_kl1e3.json  ar_vae_edente.json  nreg_edente_from_both.json  nreg_edente_from_dente.json  reg_edente_from_both.json  reg_edente_from_dente.json  vae_both.json  vae_both_no_adv.json  vae_config.json  vae_config_explained.md  vae_dente.json  vae_dente_2.json  vae_dente_no_adv.json  vae_edente.json  vae_edente_no_adv.json
data/config/: environment_tif.json
old_sources/: compute_metrics_class_tif.py  config_train_16g_cond.json  inference_vae_tif.py  train_autoencoder_tif.py  train_diffusion_tif_cond.py  tsne_latent_vae.py  umap_latent_vae.py  umap_latent_vae_fixed.py  utils_tif.py  utils_tif_no_augment.py  visualize_image.py
reg_scripts/: README.md  evaluate_regression.py  inference_regression.py  train_regression.py
scripts/: README.md  VAE_PLAN.md  analysis_common.py  analyze_ar_channels.py  analyze_interactive.py  analyze_static.py  analyze_tsne.py  analyze_umap.py  cmd.md  compute_mask_metrics.py  evaluate_vae.py  extract_ar_channels.py  inference_ldm.py  inference_vae.py  train_ldm.py  train_vae.py
src/pti_ldm_vae/: __init__.py
src/pti_ldm_vae/analysis/: README.md  __init__.py  common.py  latent_cache.py  latent_distance.py  latent_space.py  metrics.py  roadmap.md
src/pti_ldm_vae/data/: README.md  __init__.py  augmentation.py  dataloaders.py  transforms.py
src/pti_ldm_vae/models/: README.md  __init__.py  autoencoder.py  losses.py  regression_head.py  unet.py
src/pti_ldm_vae/utils/: README.md  __init__.py  cli_common.py  distributed.py  eval_metrics.py  losses.py  metrics.py  regression_utils.py  vae_loader.py  visualization.py
vae_scripts/: README.md  VAE_PLAN.md  analyze_ar_channels.py  analyze_interactive.py  analyze_static.py  evaluate_vae.py  inference_vae.py  train_vae.py
