[project]
name = "pti-ldm-vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.7",
    "monai>=1.5.1",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pyyaml>=6.0.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "tensorflow>=2.20.0",
    "tifffile>=2025.10.4",
    "torch>=2.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "umap>=0.1.1",
]

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"
